<resources>
    <string name="app_name">Habits</string>
    <string name="habit_name">Habit</string>
    <string name="habit_description">Description</string>
    <string name="repeats">Number of repeats</string>
    <string name="habit_interval">Interval in days between executions</string>
    <string name="priority">Priority</string>
    <string name="habit_type">Type</string>
    <string name="day">&#160;day</string>

    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>

    <string name="habit_type_good">Good</string>
    <string name="title_edit_habit">Your Habit</string>
    <string name="habit_type_bad">Bad</string>
    <string name="save">Save</string>
    <string name="days">&#160;days</string>
    <string name="create_new_habit">Create new habit</string>
    <string name="interval">Interval:&#160;</string>
    <string name="close_drawer">close</string>
    <string name="open_drawer">open</string>
    <string name="menu_item_habits">Habits</string>
    <string name="menu_item_about">About</string>
    <string name="bottom_sheet_title">Search and Filters</string>
    <string name="sort_by_name_title">Sort by name</string>
    <string name="search_by_name_title">Search by name</string>

    <string name="error_empty_habit">Habit is empty</string>
    <string name="error_repeats_incorrect">Number of repeats must be greater than zero</string>
    <string name="error_interval">Frequency must be greater than zero</string>

    <string-array name="priorities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="database_name">"habits_database"</string>
    <string name="avatar">avatar</string>
    <string name="delete">Delete</string>

</resources>