<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bright"
    tools:context=".ui.EditHabitActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/habit_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLength="40"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/habit_description"
                android:inputType="textMultiLine"
                android:maxLength="200" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_description">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/count"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/repeats"
                android:inputType="number"
                android:maxLength="40"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_count">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/habit_interval"
                style="@style/BaseEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/habit_interval"
                android:inputType="number"
                android:maxLength="40"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/grey_alto_edge"
            app:layout_constraintBottom_toBottomOf="@+id/priority_spinner"
            app:layout_constraintTop_toTopOf="@+id/priority_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priority_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/priority"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_interval" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/priority_spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:entries="@array/priorities"
            android:popupBackground="@drawable/solid_white_edge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/priority_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="8dp"
            android:text="@string/habit_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_spinner" />

        <RadioGroup
            android:id="@+id/types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_type">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_type_good" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/habit_type_bad" />
        </RadioGroup>

        <Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:textAllCaps="false"
            android:text="@string/save"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_type" />

        <!--        <HorizontalScrollView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/habit_types">-->

        <!--            <com.example.habits.GradientView-->
        <!--                android:layout_width="1000dp"-->
        <!--                android:layout_height="120dp" />-->

        <!--            <androidx.recyclerview.widget.RecyclerView-->
        <!--                android:id="@+id/colorPicker"-->
        <!--                android:layout_width="1600dp"-->
        <!--                android:layout_height="120dp"-->
        <!--                android:orientation="horizontal"-->

        <!--                app:layoutManager="LinearLayoutManager" />-->


        <!--        </HorizontalScrollView>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
