<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_bright">


    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/silver"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:text="@string/bottom_sheet_title"
        android:textColor="@color/black_small"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switcher_sort_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textColor="@color/black_small"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:paddingHorizontal="15dp"
        android:text="@string/sort_by_name_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_by_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/search_by_name_title"
        android:maxLength="50"
        android:maxLines="1"
        android:textSize="16sp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switcher_sort_by_name" />


</androidx.constraintlayout.widget.ConstraintLayout>